feat(admin-ui): implements admin ui, user management, rate limiting and few storage ui tweaks
